Work around MOC bug

Rename some metadata items to work around a bug in Qt's MOC where it
chokes on macro arguments that start with numbers.

Even though this code doesn't use Qt itself, the issue makes it
impossible for Qt users to include this header, which can prevent Qt
applications from using KWIVER.

See also https://bugreports.qt.io/browse/QTBUG-87219.